getAll is complete